--- a/backend/.env
+++ b/backend/.env
@@ -25,6 +25,6 @@ APP_SECRET=261c3e1d98842c0fb444a9524d6260dc
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root@localhost/app?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root@127.0.0.1/capitals?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
