Cleaning + adding Bootstrap 5

--- a/frontend/capitals/public/manifest.json
+++ b/frontend/capitals/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kraje i stolice",
+  "name": "Kraje i stolice by Mzb",
   "icons": [
     {
       "src": "favicon.ico",
