Backend: add cors policy

--- a/backend/.env
+++ b/backend/.env
@@ -28,3 +28,7 @@ APP_SECRET=261c3e1d98842c0fb444a9524d6260dc
 DATABASE_URL="mysql://root@127.0.0.1/capitals?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
