--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.16",
         "friendsofsymfony/rest-bundle": "^3.6",
         "jms/serializer-bundle": "^5.3",
+        "nelmio/cors-bundle": "^2.3",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
